# bmstu-aa

./: .gitignore  README.md
hw_1/: main.py
hw_1/schemes/: infgraph.graphml  infhist.graphml  opgraph.graphml  ophist.graphml
lab_01/: analysis.py  interaction.py  main.py  requirements.txt
lab_01/docs/: 00-abstract.aux  00-abstract.tex  01-contents.aux  02-intro.aux  02-intro.tex  10-analysis.aux  10-analysis.tex  20-design.aux  20-design.tex  30-impl.aux  30-impl.tex  40-research.aux  40-research.tex  50-conclusion.aux  50-conclusion.tex  51-biblio.aux  51-biblio.bib  preamble.inc.tex  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.toc
lab_01/levenshtein/: __init__.py  damerau_levenshtein.py  levenshtein.py  types.py
lab_01/lib/: __init__.py  damerau_levenshtein.py  levenshtein.py  types.py
lab_01/tests/: test_damerau_levenshtein.py  test_levenshtein.py
lab_02/: analysis.py  config.toml  interaction.py  main.py
lab_02/docs/: 00-abstract.aux  00-abstract.tex  (+27 more)
lab_03/: analysis.py  config.toml  interaction.py  main.py  tmp.py
lab_04/: CMakeLists.txt
lab_04/app/: errors.cpp  errors.hpp  main.cpp  point.cpp  point.hpp  points.cpp  points.hpp
lab_04/app/data/: points.txt  points2.txt  points_res.txt
lab_04/docs/: 00-abstract.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  51-biblio.tex  preamble.inc.tex  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.toc
lab_04/docs/csvs/: forward.csv  res.txt  res2.txt
lab_07/: main.py
(+81 files in other folders)
